--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "homepage": "https://github.com/KaanOkumus355/LoopHandmadeBagTR#readme",
   "description": "",
   "dependencies": {
+    "connect-mongo": "^5.1.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "mongoose": "^8.17.0",
     "multer": "^2.0.2"
   }
 }
